--- a/packages/theme-chalk/src/input-number.scss
+++ b/packages/theme-chalk/src/input-number.scss
@@ -1,3 +1,4 @@
+@use "sass:math";
 @import "mixins/mixins";
 @import "common/var";
 @import "input";
@@ -34,7 +35,7 @@
     &:hover {
       color: $--color-primary;
 
-      &:not(.is-disabled) ~ .el-input .el-input__inner:not(.is-disabled) {
+      &:not(.is-disabled)~.el-input .el-input__inner:not(.is-disabled) {
         border-color: $--input-focus-border;
       }
     }
@@ -137,7 +138,7 @@
 
     @include e((increase, decrease)) {
       height: auto;
-      line-height: #{($--input-height - 2) / 2};
+      line-height: #{math.div($--input-height - 2, 2)};
 
       [class*=el-icon] {
         transform: scale(.8);
@@ -160,20 +161,26 @@
     }
 
     &[class*=medium] {
-      [class*=increase], [class*=decrease] {
-        line-height: #{($--input-medium-height - 2) / 2};
+
+      [class*=increase],
+      [class*=decrease] {
+        line-height: #{math.div($--input-medium-height - 2, 2)};
       }
     }
 
     &[class*=small] {
-      [class*=increase], [class*=decrease] {
-        line-height: #{($--input-small-height - 2) / 2};
+
+      [class*=increase],
+      [class*=decrease] {
+        line-height: #{math.div($--input-small-height - 2, 2)};
       }
     }
 
     &[class*=mini] {
-      [class*=increase], [class*=decrease] {
-        line-height: #{($--input-mini-height - 2) / 2};
+
+      [class*=increase],
+      [class*=decrease] {
+        line-height: #{math.div($--input-mini-height - 2, 2)};
       }
     }
   }
