--- a/packages/theme-chalk/src/loading.scss
+++ b/packages/theme-chalk/src/loading.scss
@@ -1,3 +1,4 @@
+@use "sass:math";
 @import "mixins/mixins";
 @import "common/var";
 
@@ -26,7 +27,7 @@
     position: fixed;
 
     .el-loading-spinner {
-      margin-top: #{- $--loading-fullscreen-spinner-size / 2};
+      margin-top: #{math.div(-$--loading-fullscreen-spinner-size, 2)};
 
       .circular {
         height: $--loading-fullscreen-spinner-size;
@@ -38,7 +39,7 @@
 
 @include b(loading-spinner) {
   top: 50%;
-  margin-top: #{- $--loading-spinner-size / 2};
+  margin-top: #{math.div(-$--loading-spinner-size, 2)};
   width: 100%;
   text-align: center;
   position: absolute;
@@ -85,10 +86,12 @@
     stroke-dasharray: 1, 200;
     stroke-dashoffset: 0;
   }
+
   50% {
     stroke-dasharray: 90, 150;
     stroke-dashoffset: -40px;
   }
+
   100% {
     stroke-dasharray: 90, 150;
     stroke-dashoffset: -120px;
