--- a/packages/theme-chalk/src/mixins/mixins.scss
+++ b/packages/theme-chalk/src/mixins/mixins.scss
@@ -4,12 +4,25 @@
 /* Break-points
  -------------------------- */
 @mixin res($key, $map: $--breakpoints) {
+
   // 循环断点Map，如果存在则返回
   @if map-has-key($map, $key) {
-    @media only screen and #{inspect(map-get($map, $key))} {
-      @content;
+    @if $key=='sm-only' or $key=='md-only' or $key=='lg-only' {
+
+      // 判定特定定义处理字符串参数值问题
+      @media only screen and #{unquote(map-get($map, $key))} {
+        @content;
+      }
     }
-  } @else {
+
+    @else {
+      @media only screen and #{inspect(map-get($map, $key))} {
+        @content;
+      }
+    }
+  }
+
+  @else {
     @warn "Undefeined points: `#{$map}`";
   }
 }
@@ -68,7 +81,7 @@
 /* BEM
  -------------------------- */
 @mixin b($block) {
-  $B: $namespace+'-'+$block !global;
+  $B: $namespace + '-' + ($block) !global;
 
   .#{$B} {
     @content;
@@ -79,6 +92,7 @@
   $E: $element !global;
   $selector: &;
   $currentSelector: "";
+
   @each $unit in $element {
     $currentSelector: #{$currentSelector + "." + $B + $element-separator + $unit + ","};
   }
@@ -91,7 +105,9 @@
         }
       }
     }
-  } @else {
+  }
+
+  @else {
     @at-root {
       #{$currentSelector} {
         @content;
@@ -103,6 +119,7 @@
 @mixin m($modifier) {
   $selector: &;
   $currentSelector: "";
+
   @each $unit in $modifier {
     $currentSelector: #{$currentSelector + & + $modifier-separator + $unit + ","};
   }
@@ -171,11 +188,11 @@
 }
 
 @mixin extend-rule($name) {
-  @extend #{'%shared-'+$name};
+  @extend #{'%shared-'+ $name};
 }
 
 @mixin share-rule($name) {
-  $rule-name: '%shared-'+$name;
+  $rule-name: '%shared-' + $name;
 
   @at-root #{$rule-name} {
     @content
@@ -187,4 +204,3 @@
     @content
   }
 }
-
