--- a/packages/theme-chalk/src/transfer.scss
+++ b/packages/theme-chalk/src/transfer.scss
@@ -1,3 +1,4 @@
+@use "sass:math";
 @import "mixins/mixins";
 @import "mixins/utils";
 @import "common/var";
@@ -48,11 +49,12 @@
       margin: 0;
     }
 
-    i, span {
+    i,
+    span {
       font-size: 14px;
     }
 
-    & [class*="el-icon-"] + span {
+    & [class*="el-icon-"]+span {
       margin-left: 0;
     }
   }
@@ -98,7 +100,7 @@
     padding-left: 15px;
     display: block !important;
 
-    & + .el-transfer-panel__item {
+    &+.el-transfer-panel__item {
       margin-left: 0;
     }
 
@@ -138,7 +140,7 @@
       font-size: 12px;
       display: inline-block;
       box-sizing: border-box;
-      border-radius: #{$--transfer-filter-height / 2};
+      border-radius: #{math.div($--transfer-filter-height, 2)};
       padding-right: 10px;
       padding-left: 30px;
     }
@@ -218,6 +220,7 @@
     height: 14px;
     width: 14px;
     border-radius: 3px;
+
     &::after {
       height: 6px;
       width: 3px;
